Revise chapter 10 notes on safepoints and introduce benchmarking example
- Expanded the section on safepoints, detailing operations that require them and the implications of Time to SafePoint (TTSP) on application performance.
- Added monitoring options for safepoints to aid in performance analysis.
- Introduced a new benchmarking example comparing standard and domain-specific implementations of the `toUpperCase` method, demonstrating potential performance improvements.